Rebrand sample as Rocket Software

--- a/NXSamples/ActiveX/IE/APP_NAVIGATE.HTM
+++ b/NXSamples/ActiveX/IE/APP_NAVIGATE.HTM
@@ -32,7 +32,7 @@ with the important ability </STRONG>to use the HTML elements within your applica
 &nbsp;<INPUT id=inputimage2 name=win3 src="file:WIN-3.GIF" 
 style="LEFT: 250px; POSITION: absolute; TOP: 30px" type=image onclick="return inputimage2_onclick()"> <SPAN id=text1 
 style="LEFT: 0px; WIDTH: 153px; POSITION: absolute; TOP: 0px; HEIGHT: 17px">
-<P><A href="http://www.microfocus.com">Micro Focus Home page</A></P></SPAN><SPAN id=text2 
+<P><A href="http://www.rocketsoftware.com">Rocket Software Home page</A></P></SPAN><SPAN id=text2 
 style="LEFT: 160px; WIDTH: 180px; POSITION: absolute; TOP: 0px; HEIGHT: 18px">
 <P><A href="?win2.">Application link to Window2 </A></P></SPAN><INPUT id=submit1 name=win3 
 style="LEFT: 350px; POSITION: absolute; TOP: 0px" type=submit value=Window3 _MF_Flags="1">
